# jmomden

./: .gitignore  README.md  pyproject.toml
src/jmomden/: __init__.py  den_appr.py  den_orig.py  gramschmidt.py  polyvect.py
